# EAL_Shadow_Figures

./: .gitignore  README.md  build-site.py  main.py  models.py  parse_csv.py  pyproject.toml  shadowfigures.csv  shadows.py
site/: 1.html  10.html  100.html  1000.html  1001.html  1002.html  1003.html  1004.html  1005.html  1006.html  1007.html  1008.html  1009.html  101.html  1010.html  1011.html  1012.html  1013.html  1014.html  1015.html  1016.html  1017.html  1018.html  1019.html  102.html  1020.html  1021.html  1022.html  1023.html  1024.html  1025.html  1026.html  1027.html  1028.html  1029.html  103.html  1030.html  1031.html  1032.html  1033.html  (+3961 more)
templates/: base.html  images.html  index.html  object.html  objects.html
test/: shadowfigures_test.csv
